--- a/templates/base.html
+++ b/templates/base.html
@@ -2,17 +2,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <!-- Обязательные мета-теги -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap, иконки и шрифт -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900'
           rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{% static 'recipesiteapp/main.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="{% static 'recipesiteapp/main.css' %}">
 
     {% if title %}
         <title>{{ title }}</title>
@@ -22,39 +19,71 @@
 </head>
 <body>
 <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-color fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'index' %}"><i class='bx bxs-cookie bx-spin-hover'></i> Сайт с рецептами</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+            <a class="navbar-brand" href="{% url 'index' %}"><i class='bx bxs-cookie bx-spin-hover'></i> Сайт с
+                рецептами</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarToggle">
-                <div class="navbar-nav mr-auto">
-                    <a class="nav-item nav-link " href="{% url 'index' %}">Главная</a>
-                    <a class="nav-item nav-link" href="{% url 'about' %}">О сайте</a>
-                </div>
-                <!-- Правая часть навигационной панели -->
-                <div class="navbar-nav">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'about' %}">О сайте</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">
+                            Разделы
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item" href="{% url 'last-recipes' %}">Новые рецепты</a></li>
+                            <li><a class="dropdown-item" href="#">Лучшие рецепты</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown2" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false">Категории</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown2">
+                            {% for category in categories %}
+                                <li><a class="dropdown-item"
+                                       href="{% url 'category-list' category.id %}">{{ category.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
                     {% if user.is_authenticated %}
-                        <a class="nav-item nav-link" href="{% url 'recipe-create' %}">Добавить рецепт</a>
-                        <a class="nav-item nav-link" href="{% url 'profile' %}">Профиль</a>
-                        <form action="{% url 'logout' %}" method="post">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'recipe-create' %}">Добавить рецепт</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'profile' %}">Профиль</a>
+                    </li>
+                    <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
                         <button class="btn btn-outline-danger" type="submit">Выход</button>
-                        </form>
+                    </form>
                     {% else %}
-                        <a class="nav-item nav-link" href="{% url 'login' %}">Вход</a>
-                        <a class="nav-item nav-link" href="{% url 'register' %}">Регистрация</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Вход</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Регистрация</a>
+                    </li>
                     {% endif %}
-                </div>
+                </ul>
             </div>
         </div>
     </nav>
 </header>
 <main role="main" class="container">
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-12">
             {% if messages %}
                 {% for message in messages %}
                     <div class="alert alert-{{ message.tags }}">
@@ -62,40 +91,21 @@
                     </div>
                 {% endfor %}
             {% endif %}
+
             {% block main-content %}
-                <p>Test</p>
             {% endblock %}
-        </div>
-        <div class="col-md-4">
-            <div class="content-section">
-                <h3>Разделы</h3>
-{#                <p class='text-muted'>Кулинарные рецепты#}
-                <ul class="list-group">
-                    <li class="list-group-item list-group-item-light">Новые рецепты</li>
-                    <li class="list-group-item list-group-item-light">Категории</li>
-                    <li class="list-group-item list-group-item-light">Лучшие рецепты</li>
-                </ul>
-                </p>
-            </div>
         </div>
     </div>
 
 </main>
-<!-- Футер закреплен внизу, независимо от количества постов на странице -->
 <footer class="text-center bg-dark">
-    <p><a href="{% url 'index' %}">	&copy; Сайт рецептов 2024</a></p>
+    <p><a href="{% url 'index' %}"> &copy; Сайт рецептов 2024</a></p>
 </footer>
-
-<!-- Дополнительные скрипты JavaScript -->
-<!-- Сначала jQuery, затем Popper.js, последним Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
         crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
 </body>
 </html>
