--- a/templates/recipesiteapp/index.html
+++ b/templates/recipesiteapp/index.html
@@ -1,23 +1,30 @@
 {% extends "base.html" %}
 {% block main-content %}
     <div class="container">
-        <div class="row">
+        <div class="text-center my-5">
+            <h1>Случайные рецепты</h1>
+            <hr>
+        </div>
+        <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
             {% for recipe in recipes %}
-                <div class="col-sm-6">
-                    <article class="media content-section">
-                        <img class="rounded-circle article-img" src="{{ recipe.author.profile.image.url }}"
-                             alt="userpic">
-                        <div class="media-body">
-                            <div class="article-metadata">
-                                <a class="mr-2" href="{% url 'author-posts' recipe.author.username %}">{{ recipe.author }}</a>
-                                <small class="text-muted">{{ recipe.addition_date|date:"F d, Y" }}</small>
-                            </div>
-                            <h2><a class="article-title" href="{% url 'recipe' recipe.id %}">{{ recipe.name }}</a></h2>
-                            <p class="article-content">{{ recipe.description|safe|slice:':200' }}</p>
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="{{ recipe.img.url }}" class="card-img-top" alt="recipe-img">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                <a href="{% url 'recipe' recipe.id %}">{{ recipe.name }}</a>
+                            </h5>
+                            <p class="card-text">{{ recipe.description|safe|slice:':100' }}</p>
                         </div>
-                    </article>
+                        <div class="card-footer">
+                            <a class="mr-2 text-muted"
+                               href="{% url 'author-posts' recipe.author.username %}">{{ recipe.author }}</a>
+                            <small class="text-muted">| Добавлено: {{ recipe.addition_date|date:"F d, Y" }}</small>
+                        </div>
+                    </div>
                 </div>
             {% endfor %}
         </div>
+        
     </div>
 {% endblock main-content %}
