--- a/templates/recipesiteapp/recipe_form_upd.html
+++ b/templates/recipesiteapp/recipe_form_upd.html
@@ -16,7 +16,7 @@
                 </div>
             {% endif %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Новый рецепт</legend>
+                <legend class="border-bottom mb-4">Изменить рецепт</legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group mt-4">
