--- a/templates/usersapp/profile.html
+++ b/templates/usersapp/profile.html
@@ -17,8 +17,8 @@
                 {{ u_form|crispy }}
                 {{ p_form|crispy }}
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Обновить</button>
+            <div class="form-group mt-4">
+                <button class="btn btn-outline-secondary" type="submit">Обновить</button>
             </div>
         </form>
     </div>
