--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Главная</a>
+                        <a class="nav-link" aria-current="page" href="{% url 'index' %}">Главная</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">О сайте</a>
@@ -42,14 +42,14 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
                             <li><a class="dropdown-item" href="{% url 'last-recipes' %}">Новые рецепты</a></li>
-                            <li><a class="dropdown-item" href="#">Лучшие рецепты</a></li>
+                            <li><a class="dropdown-item disabled" href="#">Популярные рецепты</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown2" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">Категории</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown2">
-                            {% for category in categories %}
+                            {% for category in all_categories %}
                                 <li><a class="dropdown-item"
                                        href="{% url 'category-list' category.id %}">{{ category.name }}</a></li>
                             {% endfor %}
@@ -81,7 +81,7 @@
         </div>
     </nav>
 </header>
-<main role="main" class="container">
+<main role="main" class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             {% if messages %}
@@ -98,7 +98,7 @@
     </div>
 
 </main>
-<footer class="text-center bg-dark">
+<footer class="text-center bg-color">
     <p><a href="{% url 'index' %}"> &copy; Сайт рецептов 2024</a></p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
