--- a/templates/recipesiteapp/recipe_confirm_delete.html
+++ b/templates/recipesiteapp/recipe_confirm_delete.html
@@ -6,7 +6,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Удаление рецепта</legend>
-                <h2>Вы уверены, что хотите удалить этот рецепт?"{{ object.name }}"</h2>
+                <h2>Вы уверены, что хотите удалить рецепт "{{ object.name }}"?</h2>
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-danger" type="submit">Да, хочу удалить</button>
