--- a/templates/usersapp/login.html
+++ b/templates/usersapp/login.html
@@ -9,8 +9,8 @@
                 <legend class="border-bottom mb-4">Вход</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-dark" type="submit">Войти</button>
+            <div class="form-group mt-4">
+                <button class="btn btn-outline-secondary" type="submit">Войти</button>
             </div>
         </form>
         <div class="border-top pt-3">
