--- a/templates/recipesiteapp/category_list.html
+++ b/templates/recipesiteapp/category_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main-content %}
-    <div class="container">
+    <div class="container mb-4">
         <div class="text-center my-5">
             <h1>Рецепты в категории "{{ category.name }}"</h1>
             <h3>
@@ -39,21 +39,21 @@
             {% if is_paginated %}
 
                 {% if page_obj.has_previous %}
-                    <a class="btn btn-outline-dark mb-4 mr-1" href="?page=1">Первая</a>
-                    <a class="btn btn-outline-dark mb-4 mr-1" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
+                    <a class="btn btn-outline-secondary mb-4 mr-1" href="?page=1">Первая</a>
+                    <a class="btn btn-outline-secondary mb-4 mr-1" href="?page={{ page_obj.previous_page_number }}">Предыдущая</a>
                 {% endif %}
 
                 {% for num in page_obj.paginator.page_range %}
                     {% if page_obj.number == num %}
-                        <a class="btn btn-dark mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
+                        <a class="btn btn-secondary mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
                     {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-                        <a class="btn btn-outline-dark mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
+                        <a class="btn btn-outline-secondary mb-4 mr-1" href="?page={{ num }}">{{ num }}</a>
                     {% endif %}
                 {% endfor %}
 
                 {% if page_obj.has_next %}
-                    <a class="btn btn-outline-dark mb-4 mr-1" href="?page={{ page_obj.next_page_number }}">Следующая</a>
-                    <a class="btn btn-outline-dark mb-4 mr-1"
+                    <a class="btn btn-outline-secondary mb-4 mr-1" href="?page={{ page_obj.next_page_number }}">Следующая</a>
+                    <a class="btn btn-outline-secondary mb-4 mr-1"
                        href="?page={{ page_obj.paginator.num_pages }}">Последняя</a>
                 {% endif %}
 
