--- a/templates/recipesiteapp/index.html
+++ b/templates/recipesiteapp/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block main-content %}
-    <div class="container">
+    <div class="container mb-4">
         <div class="text-center my-5">
             <h1>Случайные рецепты</h1>
             <hr>
